Fix error from html-validate: a in btn & whitespace

--- a/style.scss
+++ b/style.scss
@@ -85,9 +85,11 @@ body{
 }
 
 .btn-main{
+    display: inline-block;
     position: relative;
     width: 200px;
     height: 50px;
+    margin: 0 auto;
 
     background: none;
     border: 2px solid white;
@@ -97,7 +99,7 @@ body{
     transition: .5s;
     cursor: pointer;
     
-    a{
+    p{
         width: 100%;
         position: absolute;
         top: 50%;
@@ -122,12 +124,13 @@ body{
         
     }
     
-    &:hover a{
+    &:hover p{
         color: $mian-color;
     }
 }
 
 .btn-secondary{
+    display: inline-block;
 
     margin-top: 80px;
 
@@ -136,7 +139,8 @@ body{
 
     border: none;
 
-    a{
+    p{
+        text-align: center;
         color: white;
     }
 
@@ -151,7 +155,7 @@ body{
         
     }
     
-    &:hover a{
+    &:hover p{
         color: white;
     }
 }
@@ -301,6 +305,10 @@ body{
 
 .about{
 
+    .main-wrapper{
+        justify-content: space-between
+    }
+
     .content-wrapper{
         @include flex-center();
         flex-direction: column;
@@ -369,7 +377,7 @@ body{
         }
         
         p{
-            color: $light-grey;
+            // color: $light-grey;
         }
     }
 }
@@ -526,53 +534,78 @@ body{
 
 // ------------------------------------TEAM-----------------------------
 
-.team{
-
+.gallery{
+    
     .main-wrapper{
         width: 100%;
         max-width: 100%;
         padding-left: 0;
         padding-right: 0;
         
-
+        
         .gallery-wrapper{
             @include flex-center();
             flex-wrap: wrap;
             width: 100%;
             height: 40vw;
-
+            
             .gallery-item{
+                position: relative;
                 @include flex-center();
                 width: 20vw;
                 height: 20vw;
-
+                
                 background-color: $light-grey;
-
+                
+                // overflow: hidden;
                 cursor: pointer;
                 transition: .2s;
+                object-fit: cover;
+                object-position: center;
+                
+                &::before{
+                    @include pseudo(100%, 100%, 0, auto, auto, 0, #17daa39d);
+                    z-index: 10;
 
-                p{
+                    opacity: 0;
+                    transition: opacity .5s;
+                }
+
+                &:hover::before{
+                    opacity: 1;
+                }
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+                
+                .name{
+                    position: absolute;
                     font-size: 40px;
                     font-weight: 100;
                     color: white;
-
+                    
                     opacity: 0;
-                    transition: .2s;
+                    transition: opacity 1s;
                 }
                 
                 &:nth-child(even){
                     background-color: $lighter-grey;
                 }
-
-                &:hover{
-                    background-color: #17daa39d;
-                }
-
-                &:hover p{
+                
+                &:hover .name{
                     opacity: 1;
                 }
             }
-
+            
         }
     }
+}
+
+// ------------------------------------FOOTER-----------------------------
+
+footer{
+    height: 100vh;
+    background-color: $mian-color;
 }
